--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
+    "package.json": "^2.0.1",
     "querystring": "^0.2.0"
   },
   "devDependencies": {},
