--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-animated-css": "^1.0.4",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
