--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-social-icons": "^3.0.0",
     "reactstrap": "^6.5.0",
     "styled-components": "^4.1.2"
   },
