--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "react-animated-css": "^1.0.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-native": "^0.57.7",
+    "react-parallax": "^2.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-scroll-parallax": "^1.3.5",
     "react-social-icons": "^3.0.0",
     "reactstrap": "^6.5.0",
     "styled-components": "^4.1.2"
