--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "react-animated-css": "^1.0.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-line": "^1.0.2",
     "react-native": "^0.57.7",
+    "react-native-hr": "^1.1.4",
     "react-parallax": "^2.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
