--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-exists": "^5.0.1",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-animated-css": "^1.0.4",
