Started on the CV section

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7",
     "package.json": "^2.0.1",
     "querystring": "^0.2.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "concurrently \"cd backend && node server.js\" \"cd frontend && npm start\"",
+    "start": "concurrently \"cd backend && nodemon server.js\" \"cd frontend && npm start\"",
     "build": "concurrently \"npm install\" \"cd backend && npm install\" \"cd frontend && npm install\""
   },
   "keywords": [],
