--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-scroll-parallax": "^1.3.5",
     "react-social-icons": "^3.0.0",
     "reactstrap": "^6.5.0",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "vertical-timeline-component-for-react": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
