--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "2.1.1",
     "react-scroll-parallax": "^1.3.5",
     "react-social-icons": "^3.0.0",
+    "react-visibility-sensor": "^5.0.2",
     "reactstrap": "^6.5.0",
     "styled-components": "^4.1.2",
     "vertical-timeline-component-for-react": "^1.0.6"
