--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "file-exists": "^5.0.1",
     "lodash": "^4.17.11",
+    "particles.js": "^2.0.0",
     "react": "^16.6.3",
     "react-animated-css": "^1.0.4",
     "react-bootstrap": "^0.32.4",
@@ -14,6 +15,7 @@
     "react-native": "^0.57.7",
     "react-native-hr": "^1.1.4",
     "react-parallax": "^2.0.1",
+    "react-particles-js": "^2.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scroll-parallax": "^1.3.5",
