--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-particles-js": "^2.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-scroll": "^1.7.10",
     "react-scroll-parallax": "^1.3.5",
     "react-social-icons": "^3.0.0",
     "react-visibility-sensor": "^5.0.2",
