--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "react-scroll-parallax": "^1.3.5",
     "react-social-icons": "^3.0.0",
     "react-visibility-sensor": "^5.0.2",
+    "react-vivus": "0.0.2",
     "reactstrap": "^6.5.0",
     "styled-components": "^4.1.2",
-    "vertical-timeline-component-for-react": "^1.0.6"
+    "vertical-timeline-component-for-react": "^1.0.6",
+    "vivus": "^0.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
