--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-animated-css": "^1.0.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-keydown": "^1.9.7",
     "react-line": "^1.0.2",
     "react-markdown": "^4.0.4",
     "react-native": "^0.57.7",
@@ -43,5 +44,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.2.2"
+  }
 }
